<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GENERAL -->
    <string name="app_name">Salúdate</string>
    <string name="ok">Accept</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="firebase_error_log">Firebase Error</string>

    <!-- LOGIN & REGISTER -->
    <string name="user_login_view">Login</string>
    <string name="user_registration_view">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="go_register">New user? Sign up now</string>
    <string name="go_login">If you are already registered, log in</string>
    <string name="error_empty_email">Email can\'t be empty</string>
    <string name="error_empty_password">Password can\'t be empty</string>
    <string name="error_empty_password_confirmation">Confirmation password can\'t be empty</string>
    <string name="error_current_password_filled">Current password must be filled</string>
    <string name="error_passwords_comparison">Passwords don\'t match</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="no_changes_saving_user_info">No changes to save user info</string>
    <string name="error_registration_failed">Registration failed</string>

    <!-- CALENDAR SECTION -->
    <string name="calendar">Calendar</string>

    <!-- USER SECTION -->
    <string name="user">User</string>
    <string name="user_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthdate">Birthdate</string>
    <string name="sex">Sex</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="error_password">Incorrect password</string>
    <string name="success_saving_user">User successfully saved</string>
    <string name="error_saving_user_info">User info saving error</string>
    <string name="error_retrieving_user_info">User info retrieving error</string>
    <string name="errors_while_saving">Errors while saving</string>

    <!-- SKIN CONDITIONS SECTION -->
    <string name="skin_conditions">Skin conditions</string>
    <string name="skin_conditions_abbreviated">Skin conditions</string>

    <!-- DIALOG -->
    <string name="logout_question">Are you sure you want to log out?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <!-- ARRAY -->
    <string-array name="sex_array">
        <item>Prefer not to say</item>
        <item>Female</item>
        <item>Male</item>
        <item>Intersex</item>
    </string-array>

</resources>